# OCI_MCP_test

./: .gitignore  README.md  pyproject.toml
ai_agent/: __init__.py  agent.py
oci_mcp_server/: __init__.py  server.py
